@@ -15,6 +15,8 @@ If you are upgrading from a release of TMDA < 0.65:
 
   DELIVERY = "|/usr/bin/procmail ~/.procmailrc-tmda"
 
+* contrib/sample.tmdarc has been renamed contrib/sample.config.
+
 ======================================================================
 
 If you are upgrading from a release of TMDA < 0.63:
