@@ -1,6 +1,6 @@
 # -*- python -*-
 
-# sample.tmdarc - Sample configuration file for TMDA.
+# sample.config - Sample configuration file for TMDA.
 #
 # See http://tmda.net/config-vars.html for descriptions of all
 # the available options.
@@ -8,14 +8,16 @@
 # NOTE: ~/.tmda/config must be chmod 400 or chmod 600 !
 
 #########################################################
-# qmail required variables; required only for qmail users
+# qmail/Courier required variables; required only for
+# qmail/Courier users
 #
 # (none at this time)
 #
 #########################################################
 
 #################################################################
-# Non-qmail required variables; required only for non-qmail users
+# Non-qmail/Courier required variables; required only for
+# non-qmail/Courier users
 #
 # Uncomment one line from each section.
 #
@@ -27,6 +29,9 @@
 #MAIL_TRANSFER_AGENT = "postfix"
 #MAIL_TRANSFER_AGENT = "sendmail"
 
+#RECIPIENT_DELIMITER = "-"
+#RECIPIENT_DELIMITER = "+"
+
 #DELIVERY = "~/Maildir/"
 #DELIVERY = "~/Mailbox"
 #DELIVERY = "/var/mail/jasonrm"
@@ -34,12 +39,15 @@
 #DELIVERY = "|/usr/bin/procmail ~/.procmailrc-tmda"
 #DELIVERY = "me@new.job.com"
 
-#RECIPIENT_DELIMITER = "-"
-#RECIPIENT_DELIMITER = "+"
-
 ######################################################################
 # No other variables are required, but you may be interested in
 # further customization.  See http://tmda.net/config-vars.html for
 # more information on the other available configuration variables.
+#
+# Here are examples of some recommended configuration variables.
 ######################################################################
 
+#CONFIRM_APPEND = os.path.expanduser("~/.tmda/lists/confirmed")
+#LOGFILE_DEBUG = os.path.expanduser("~/.tmda/logs/debug")
+#LOGFILE_INCOMING = os.path.expanduser("~/.tmda/logs/incoming")
+#LOGFILE_OUTGOING = os.path.expanduser("~/.tmda/logs/outgoing")
