@@ -1,6 +1,6 @@
 <HTML>
 <!-- THIS PAGE IS AUTOMATICALLY GENERATED.  DO NOT EDIT. -->
-<!-- Thu Oct 31 12:29:23 2002 -->
+<!-- Wed Nov 13 17:02:50 2002 -->
 <!-- USING HT2HTML 1.2 -->
 <!-- SEE http://barry.wooz.org/software/ht2html -->
 <!-- User-specified headers:
@@ -264,7 +264,7 @@ If you don't have an outgoing filter file, or the destination address
 doesn't match any lines in your filter file, the message will be
 tagged with a dated address by default.  The lines in your filter make
 exceptions to that rule.  You can also change the default by setting
-<strong>ACTION_OUTGOING</strong> in your tmdarc.
+<strong>ACTION_OUTGOING</strong> in your tmda/config.
 <br><br>
 
 <strong>TIP:</strong>
@@ -379,7 +379,7 @@ Send the message to all recipients from jason-mlist-xemacs-beta@mastaler.com
 </ul>
 </ul>
 
-<li>.tmdarc configuration:<br><br>
+<li>.tmda/config configuration:<br><br>
 
 Make sure that your <b>crypt_key</b> file is the same
 on both your mail server and your mail client -- they must match.
