@@ -26,7 +26,7 @@ No changes need to be made to your configuration in order to use TMDA.
 Postfix's <em>main.cf</em> if it isn't already.  The Postfix default is
 <code><b>+</b></code> but <code><b>-</b></code> is an acceptable value as
 well.  Just make sure it matches <b>RECIPIENT_DELIMITER</b> in your
-<b>tmdarc</b>.
+<b>tmda/config</b>.
 
 </ol>
 <hr>
@@ -62,7 +62,7 @@ username+extension@domain.dom), and your Exim must be able
 to understand them.  It doesn't by default.  Both
 <code><b>+</b></code> and <code><b>-</b></code> are an acceptable
 values for the suffix, just make sure it matches
-<b>RECIPIENT_DELIMITER</b> in your <b>tmdarc</b>.
+<b>RECIPIENT_DELIMITER</b> in your <b>tmda/config</b>.
 <br><br>
 
 Add the following lines to both the <b>userforward</b> and 
