@@ -1,6 +1,6 @@
 <HTML>
 <!-- THIS PAGE IS AUTOMATICALLY GENERATED.  DO NOT EDIT. -->
-<!-- Thu Oct 31 12:29:23 2002 -->
+<!-- Wed Nov 13 17:04:19 2002 -->
 <!-- USING HT2HTML 1.2 -->
 <!-- SEE http://barry.wooz.org/software/ht2html -->
 <!-- User-specified headers:
@@ -188,7 +188,7 @@ No changes need to be made to your configuration in order to use TMDA.
 Postfix's <em>main.cf</em> if it isn't already.  The Postfix default is
 <code><b>+</b></code> but <code><b>-</b></code> is an acceptable value as
 well.  Just make sure it matches <b>RECIPIENT_DELIMITER</b> in your
-<b>tmdarc</b>.
+<b>tmda/config</b>.
 
 </ol>
 <hr>
@@ -224,7 +224,7 @@ username+extension@domain.dom), and your Exim must be able
 to understand them.  It doesn't by default.  Both
 <code><b>+</b></code> and <code><b>-</b></code> are an acceptable
 values for the suffix, just make sure it matches
-<b>RECIPIENT_DELIMITER</b> in your <b>tmdarc</b>.
+<b>RECIPIENT_DELIMITER</b> in your <b>tmda/config</b>.
 <br><br>
 
 Add the following lines to both the <b>userforward</b> and 
