@@ -38,7 +38,7 @@ filter file, or the sender address doesn't match any lines in your
 filter file, the incoming message will require confirmation.  The
 lines in your filter make exceptions to that rule.  You can also
 change the default by setting <strong>ACTION_INCOMING</strong> in your
-tmdarc.  <br><br>
+.tmda/config.  <br><br>
 
 The most common use for the incoming filter is to create both a 
 "whitelist" (see the FAQ) to allow your trusted contacts
@@ -53,9 +53,9 @@ you want to refuse mail from.
 
 <ol>
 
-<li>Finish setting up your <b>~/.tmdarc</b> and optionally a
+<li>Finish setting up your <b>~/.tmda/config</b> and optionally a
 system-wide <b>/etc/tmdarc</b> by reading through the included
-<b>sample.tmdarc</b> file.<br><br>
+<b>sample.config</b> file.<br><br>
 
 <li>Setup dot-qmail files appropriately in your home directory.<br><br>
 
@@ -169,9 +169,9 @@ instructions above, substituting <strong>.courier-foo</strong> for
 
 <ol>
 
-<li>Finish setting up your <b>~/.tmdarc</b> and optionally a
+<li>Finish setting up your <b>~/.tmda/config</b> and optionally a
 system-wide <b>/etc/tmdarc</b> by reading through the
-included <b>sample.tmdarc</b> file.  <b>MAIL_TRANSFER_AGENT</b>, <b>DELIVERY</b>, and
+included <b>sample.config</b> file.  <b>MAIL_TRANSFER_AGENT</b>, <b>DELIVERY</b>, and
 <b>RECIPIENT_DELIMITER</b> are required entries for non-qmail users.
 <br><br>
 
@@ -231,9 +231,9 @@ mailer as described in the
 <a href="config-pre.html#sendmail">Pre-Configuration</a> page.
 <ol>
 
-<li>Finish setting up your <b>~/.tmdarc</b> and optionally a
+<li>Finish setting up your <b>~/.tmda/config</b> and optionally a
 system-wide <b>/etc/tmdarc</b> by reading through the
-included <b>sample.tmdarc</b> file.  
+included <b>sample.config</b> file.  
 <b>MAIL_TRANSFER_AGENT</b>, <b>DELIVERY</b>, and
 <b>RECIPIENT_DELIMITER</b> are required entries for non-qmail users.
 <br><br>
